# investing-cache

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/investing_cache/: __init__.py  models.py  reader.py
tests/: __init__.py  test_reader.py
