[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investing-cache"
version = "0.1.0"
description = "Read-only access to daily stock indicators from Supabase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex Bespalov" }
]
keywords = ["investing", "stocks", "technical-analysis", "supabase", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alexbespalov/investing-cache"
Repository = "https://github.com/alexbespalov/investing-cache"

[tool.hatch.build.targets.wheel]
packages = ["src/investing_cache"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
